--- a/HTML/header.html
+++ b/HTML/header.html
@@ -3,6 +3,8 @@
 <img src = "logo.svg" id="logo">
 <div id="headerLeft"></div>
 <!---add other stuff here---->
+
+<!--Comment from Chris-->
 <div id="linkRow">
     <table>
         <tr>
