--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!---links to other files--->
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
     </head>
