added student view in admin panel

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="header.css">
+<link rel="stylesheet" href="..\css\header.css">
 <div id="headerTop"></div>
-<img src = "logo.svg" id="logo">
+<img src = "..\img\logo.svg" id="logo">
 <div id="headerLeft"></div>
 <!---add other stuff here---->
 
