--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <!---links to other files--->
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="..\css\style.css">
+        <script src="..\javascript\script.js" defer></script>
     </head>
     <body style="background-color: #00447C;">
         <br>
