--- a/HTML/studentCreateProfile.html
+++ b/HTML/studentCreateProfile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="createProfile.css">
-        <script src="createProfile.js" defer></script>
+        <link rel="stylesheet" href="..\css\header.css">
+        <link rel="stylesheet" href="..\css\createProfile.css">
+        <script src="..\javascript\createProfile.js" defer></script>
     </head>
     <!--- import the header instead of including its elements every time --->
     <iframe scrolling="no" style="border:none;" width="100%" src="header.html"></iframe>
