--- a/HTML/admin/students.html
+++ b/HTML/admin/students.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="..\..\css\header.css"> <!-- need to direct to another folder -->
+        <link rel="stylesheet" href="..\..\css\header.css">
         <link rel="stylesheet" href="..\..\css\admin.css">
         <script src="..\..\javascript\studentRetrieve.js" defer></script>
-    </head>
+        <!--<script src="..\..\javascript\createGame.js" defer></script>--> <!-- test -->
     <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
     <body>
         <h1 id="studentHeader">Student ()</h1>
         <div id ="userInfo">
-            <p>
-                <span id="firstNameDisplay">First Name:</span> <br>
-                <span id="lastNameDisplay">Last Name:</span> <br>
-                <span id="emailDisplay">Email:</span> <br>
-            </p>
+            First Name: <span id="firstNameDisplay">Susan</span> <br>
+            Last Name: <span id="lastNameDisplay">Sample</span> <br>
+            Email: <span id="emailDisplay">ssample@css.edu</span> <br>
         </div>
+        <br>
         <div id ="redBlackInfo">
-            <p>
-                Number of Red/Black Games Played: <span id="redBlackNum">0</span> <br> <!---3--->
-                Highest Final Score: <span id="redBlackHigh">0</span> <br><!---900--->
-                Lowest Final Score: <span id="redBlackLow">0</span> <br><!---400--->
-                Game Point Average: <span id="redBlackGPA">0</span> <br> <!--633.33--->
-            </p>
+            Number of Red/Black Games Played: <span id="redBlackNum">0</span> <br> <!---3--->
+            Highest Final Score: <span id="redBlackHigh">0</span> <br><!---900--->
+            Lowest Final Score: <span id="redBlackLow">0</span> <br><!---400--->
+            Game Point Average: <span id="redBlackGPA">0</span> <br> <!--633.33--->
         </div>
+        <br>
         <div id ="wheatSteelInfo">
-            <p>
-                Number of Wheat & Steel Games Played: <span id="wheatSteelNum">0</span> <br> <!---2--->
-                Highest Total Wheat Production: <span id="wheatHigh">0</span> <br> <!---100--->
-                Wheat Consumption Goals Met: <span id="wheatGoalNum">0</span> <br> <!--- 1 / 2 (50%) --->
-                Highest Total Steel Production: <span id="steelHigh">0</span> <br> <!---750--->
-                Steel Consumption Goals Met: <span id="steelGoalNum">0</span> <br> <!--- 2 / 2 (100%) --->
-            </p>
+            Number of Wheat & Steel Games Played: <span id="wheatSteelNum">0</span> <br> <!---2--->
+            Highest Total Wheat Production: <span id="wheatHigh">0</span> <br> <!---100--->
+            Wheat Consumption Goals Met: <span id="wheatGoalNum">0</span> <br> <!--- 1 / 2 (50%) --->
+            Highest Total Steel Production: <span id="steelHigh">0</span> <br> <!---750--->
+            Steel Consumption Goals Met: <span id="steelGoalNum">0</span> <br> <!--- 2 / 2 (100%) --->
         </div>
+        <br>
         <!--table w/ links-->
+        <!-- TODO: consider making row of links an admin footer -->
         <table id="links">
             <tr>
-                <!--All Students-->
+                <td>
+                    <a href="index.html">All Students</a> <!-- TODO: change link from index to all students -->
+                </td>
                 <td>
                     <a href="index.html">Back to Home</a> <!--admin index-->
                 </td>
-                <!--All Games-->
+                <td>
+                    <a href="index.html">All Games</a> <!-- TODO: change link from index to all games -->
+                </td>
             </tr>
         </table>
     </body>
