Worked with initial landing page, in progress.

--- a/HTML/admin/index.html
+++ b/HTML/admin/index.html
@@ -1,1 +1,91 @@
-<!--Reece-->
+<div style="width: 100%; height: 100%; position: relative">
+    <div style="width: 685px; height: 492px; left: 0px; top: 0px; position: absolute; background: #00447C"></div>
+    <div style="width: 159.20px; height: 65.53px; left: 263.40px; top: 414.98px; position: absolute; background: #D9D9D9"></div>
+    <div style="width: 663px; left: 11.47px; top: 199px; position: absolute; text-align: center; color: #FFCB00; font-size: 40px; font-family: Roboto; font-weight: 400; word-wrap: break-word">The College of St. Scholastica</div>
+    <div style="width: 557px; left: 64.50px; top: 255.49px; position: absolute; text-align: center; color: #FFCB00; font-size: 64px; font-family: Roboto; font-weight: 400; word-wrap: break-word">Game Theory<br/>Simulations</div>
+    <div style="left: 299px; top: 424.25px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Roboto; font-weight: 400; word-wrap: break-word">Start</div>
+    <div style="width: 150.53px; height: 162.20px; left: 272.07px; top: 18.04px; position: absolute">
+        <div style="width: 150.53px; height: 162.20px; left: 0px; top: 0px; position: absolute; background: radial-gradient(39.01% 45.54% at 27.16% 5.74%, #7B7C7F 0%, #A7A8AA 47%, #DCDDDE 100%)"></div>
+        <div style="width: 135.59px; height: 148.08px; left: 7.44px; top: 6.22px; position: absolute; background: #8F9194"></div>
+        <div style="width: 68.08px; height: 148.08px; left: 74.96px; top: 6.22px; position: absolute; background: radial-gradient(24.33% 57.35% at 11.40% 67.74%, #777B7F 0%, #A3A5A8 45%, #DCDDDE 100%)"></div>
+        <div style="width: 130.36px; height: 143.88px; left: 10.05px; top: 8.40px; position: absolute; background: radial-gradient(90.76% 108.54% at 45.90% 54.43%, #00C0F3 0%, #0778AE 60%, #0B4C84 100%)"></div>
+        <div style="width: 131.68px; height: 2.35px; left: 9.39px; top: 6.22px; position: absolute; background: #565759"></div>
+        <div style="width: 135.59px; height: 148.08px; left: 7.44px; top: 6.22px; position: absolute; border: 0.30px #C9CACC solid"></div>
+        <div style="width: 118px; height: 106.90px; left: 21.98px; top: 45.38px; position: absolute; background: radial-gradient(83.30% 81.77% at 90.93% 183.37%, #003359 0%, #053F6E 34%, #0A497E 71%, #0B4C84 100%)"></div>
+        <div style="width: 4.74px; height: 2.69px; left: 73.14px; top: 119.34px; position: absolute; background: #FFD400"></div>
+        <div style="width: 4.74px; height: 2.69px; left: 73.14px; top: 119.34px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.64px; height: 3.03px; left: 66.40px; top: 29.25px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.64px; height: 3.03px; left: 66.40px; top: 29.25px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.64px; height: 3.03px; left: 81.88px; top: 29.08px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.64px; height: 3.03px; left: 81.88px; top: 29.08px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 32.71px; top: 45.55px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 32.71px; top: 45.55px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 33.98px; top: 31.43px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 33.98px; top: 31.43px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.46px; height: 3.36px; left: 115.76px; top: 45.72px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.46px; height: 3.36px; left: 115.76px; top: 45.72px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 114.48px; top: 31.60px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 3.36px; left: 114.48px; top: 31.60px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 2.37px; height: 27.73px; left: 74.41px; top: 94.13px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.37px; height: 27.73px; left: 74.41px; top: 94.13px; position: absolute; border: 0.05px #FFD400 solid"></div>
+        <div style="width: 13.29px; height: 15.63px; left: 82.24px; top: 43.03px; position: absolute; background: #FFD400"></div>
+        <div style="width: 13.29px; height: 15.63px; left: 82.24px; top: 43.03px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 13.29px; height: 15.63px; left: 56.20px; top: 42.86px; position: absolute; background: #FFD400"></div>
+        <div style="width: 13.29px; height: 15.63px; left: 56.20px; top: 42.86px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 42.99px; height: 12.61px; left: 53.82px; top: 51.43px; position: absolute; background: #FFD400"></div>
+        <div style="width: 27.32px; height: 25.28px; left: 95.72px; top: 29.08px; position: absolute; background: #FFD400"></div>
+        <div style="width: 27.52px; height: 26.56px; left: 61.66px; top: 25.21px; position: absolute; background: #FFD400"></div>
+        <div style="width: 27.14px; height: 24.94px; left: 28.88px; top: 29.08px; position: absolute; background: #FFD400"></div>
+        <div style="width: 56.47px; height: 22.06px; left: 47.28px; top: 96.78px; position: absolute; background: #FFD400"></div>
+        <div style="width: 29.34px; height: 23.37px; left: 60.75px; top: 105.56px; position: absolute; background: #FFD400"></div>
+        <div style="width: 63.74px; height: 38.22px; left: 43.45px; top: 63.48px; position: absolute; background: #FFD400"></div>
+        <div style="width: 0.73px; height: 4.20px; left: 55.65px; top: 82.53px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.91px; height: 4.20px; left: 57.29px; top: 82.53px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 4.20px; left: 60.57px; top: 82.53px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 64.94px; top: 82.53px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.10px; height: 4.54px; left: 55.11px; top: 75.81px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 59.11px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.46px; height: 4.20px; left: 62.94px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 1.46px; height: 0.84px; left: 67.31px; top: 78.33px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.64px; height: 4.37px; left: 51.65px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.46px; height: 4.20px; left: 56.20px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.91px; height: 4.20px; left: 60.94px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 64.94px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.91px; height: 4.54px; left: 68.77px; top: 69.59px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.55px; height: 4.20px; left: 80.06px; top: 82.70px; position: absolute; background: #FFD400"></div>
+        <div style="width: 0.73px; height: 4.20px; left: 83.52px; top: 82.70px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 4.37px; left: 85.34px; top: 82.53px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.46px; height: 4.20px; left: 89.35px; top: 82.70px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 93.72px; top: 82.70px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 81.33px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.91px; height: 4.37px; left: 87.34px; top: 69.92px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.10px; height: 4.54px; left: 90.80px; top: 69.59px; position: absolute; background: #FFD400"></div>
+        <div style="width: 0.73px; height: 4.20px; left: 85.34px; top: 69.76px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.73px; height: 4.20px; left: 81.52px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.46px; height: 4.20px; left: 84.43px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 3.28px; height: 4.37px; left: 88.62px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 0.73px; height: 4.20px; left: 92.81px; top: 76.14px; position: absolute; background: #FFD400"></div>
+        <div style="width: 1.46px; height: 0.84px; left: 94.45px; top: 78.33px; position: absolute; background: #FFD400"></div>
+        <div style="width: 2.37px; height: 2.02px; left: 74.23px; top: 54.96px; position: absolute; background: #FFD400"></div>
+        <div style="width: 24.05px; height: 27.16px; left: 50.19px; top: 65.80px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 31.87px; height: 38.22px; left: 43.45px; top: 63.48px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 24.05px; height: 27.03px; left: 76.22px; top: 65.92px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 27.32px; height: 25.28px; left: 95.72px; top: 29.08px; position: absolute; border: 0.03px #FFD400 solid"></div>
+        <div style="width: 27.52px; height: 26.56px; left: 61.66px; top: 25.21px; position: absolute; border: 0.03px #FFD400 solid"></div>
+        <div style="width: 27.14px; height: 25.11px; left: 28.88px; top: 28.91px; position: absolute; border: 0.03px #FFD400 solid"></div>
+        <div style="width: 41.35px; height: 10.02px; left: 55.10px; top: 52.44px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 18.05px; height: 16.41px; left: 76.76px; top: 98.73px; position: absolute; border: 0.05px #FFD400 solid"></div>
+        <div style="width: 18.05px; height: 16.41px; left: 56.38px; top: 98.73px; position: absolute; border: 0.05px #FFD400 solid"></div>
+        <div style="width: 24.43px; height: 10.08px; left: 63.46px; top: 117.50px; position: absolute; border: 0.05px #FFD400 solid"></div>
+        <div style="width: 26.59px; height: 6.42px; left: 46.36px; top: 90.23px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 26.59px; height: 6.42px; left: 77.51px; top: 90.23px; position: absolute; border: 0.01px #FFD400 solid"></div>
+        <div style="width: 6.74px; height: 3.53px; left: 106.65px; top: 69.42px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 6.74px; height: 3.53px; left: 106.47px; top: 75.64px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 6.74px; height: 3.53px; left: 106.47px; top: 81.86px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 8.01px; height: 3.53px; left: 36.89px; top: 69.42px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 8.01px; height: 3.53px; left: 36.89px; top: 75.64px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 8.01px; height: 3.53px; left: 36.89px; top: 81.86px; position: absolute; border: 1px #FFD400 solid"></div>
+        <div style="width: 112.99px; height: 126.23px; left: 19.17px; top: 16.30px; position: absolute; border: 0.89px #FFD400 solid"></div>
+        <div style="width: 103.05px; height: 116.65px; left: 24.11px; top: 20.67px; position: absolute; border: 1.55px #FFD400 solid"></div>
+    </div>
+</div>
