Deleted some files and adjusted the sequence of events when signing in

--- a/HTML/studentCreateProfile.html
+++ b/HTML/studentCreateProfile.html
@@ -30,8 +30,8 @@ CreateAProfile
 </head>
 <body>
     <div id="createProfile" style="width: 100%; height: 100%; position: relative">
-        <h1>Create a Profile</h1>
-        <form method="POST" action="studentSignOn.html" onsubmit="return validateForm()">
+        <h1>Create a Profile Student</h1>
+        <form method="POST" action="profileCreate.html" onsubmit="return validateForm()">
             <div>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
