comm. out createGame.js

--- a/HTML/admin/wheatSteelView.html
+++ b/HTML/admin/wheatSteelView.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="..\..\css\header.css">
         <link rel="stylesheet" href="..\..\css\gameView.css">
         <script src="..\..\javascript\gameRetrieve.js" defer></script>
-        <script src="..\..\javascript\createGame.js" defer></script> <!-- test -->
+        <!---<script src="..\..\javascript\createGame.js" defer></script>---> <!-- test -->
     <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
     <body>
         <h1 id="studentHeader_2">Game ()</h1>
