Organized and cleaned up some stuff

--- a/HTML/TeacherSignInFolder/teacherProfileCreated.html
+++ b/HTML/TeacherSignInFolder/teacherProfileCreated.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="..\css\header.css">
-        <link rel="stylesheet" href="..\css\createProfile.css">
-        <script src="..\javascript\createProfile.js" defer></script>
+        <link rel="stylesheet" href="../../css/header.css">
+        <link rel="stylesheet" href="../../css/createProfile.css">
+        <script src="../../javascript/createProfile.js" defer></script>
+        <script src="../../javascript/studentSignOn.js" defer></script>
     </head>
     <iframe scrolling="no" style="border:none;" width="100%" src="header.html"></iframe>
     <body>
-        <h1>
-            Create Profile
-        </h1>
         <div id="createSuccess">
             Profile Created!
         </div>
@@ -24,13 +22,13 @@
                 Email:
             </p>
         </div>
-        <button id="studentSignOn"  onclick="window.location.href='studentSignOn.html';">
+        <button id="studentSignOn"  onclick="window.location.href='TeacherSignOn.html';">
             Sign In
         </button>
     </body>
     <script language="javascript">
         window.onload = function(e){ 
-            displayInfo();
+            displayInfoInformation();
         }
         </script>
 </html>
