--- a/HTML/TeacherSignInFolder/teacherSignOn.html
+++ b/HTML/TeacherSignInFolder/teacherSignOn.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="../css/TeacherSignOn.css">  <!-- Corrected the type attribute here -->
+    <link rel="stylesheet" type="text/css" href="../../css/TeacherSignOn.css">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
         <div class="password-label">Password</div>
         <input type="password" class="password-input" />
         <div class="menu">
-            <div class="home">Home</div>
-            <div class="create-session">Create New Session</div>
-            <div class="signout">Sign Out</div>
+            <a href="teacherCreateProfile.html">  <!-- Added anchor tag here -->
+                <div class="home">Create a profile</div>
+            </a>  <!-- Closing anchor tag -->
         </div>
         <div class="logo"></div>
     </div>
