added all students view, made student link dynamic

--- a/HTML/admin/studentView.html
+++ b/HTML/admin/studentView.html
@@ -15,18 +15,18 @@
         </div>
         <br>
         <div id ="redBlackInfo">
-            Number of Red/Black Games Played: <span id="redBlackNum">0</span> <br> <!---3--->
-            Highest Final Score: <span id="redBlackHigh">0</span> <br><!---900--->
-            Lowest Final Score: <span id="redBlackLow">0</span> <br><!---400--->
-            Game Point Average: <span id="redBlackGPA">0</span> <br> <!--633.33--->
+            Number of Red/Black Games Played: <span id="redBlackNum">0</span> <br>
+            Highest Final Score: <span id="redBlackHigh">0</span> <br>
+            Lowest Final Score: <span id="redBlackLow">0</span> <br>
+            Game Point Average: <span id="redBlackGPA">0</span> <br>
         </div>
         <br>
         <div id ="wheatSteelInfo">
-            Number of Wheat & Steel Games Played: <span id="wheatSteelNum">0</span> <br> <!---2--->
-            Highest Total Wheat Production: <span id="wheatHigh">0</span> <br> <!---100--->
-            Wheat Consumption Goals Met: <span id="wheatGoalNum">0</span> <br> <!--- 1 / 2 (50%) --->
-            Highest Total Steel Production: <span id="steelHigh">0</span> <br> <!---750--->
-            Steel Consumption Goals Met: <span id="steelGoalNum">0</span> <br> <!--- 2 / 2 (100%) --->
+            Number of Wheat & Steel Games Played: <span id="wheatSteelNum">0</span> <br>
+            Highest Total Wheat Production: <span id="wheatHigh">0</span> <br>
+            Wheat Consumption Goals Met: <span id="wheatGoalNum">0</span> <br>
+            Highest Total Steel Production: <span id="steelHigh">0</span> <br>
+            Steel Consumption Goals Met: <span id="steelGoalNum">0</span> <br>
         </div>
         <br>
         <!--table w/ links-->
@@ -34,7 +34,7 @@
         <table id="links">
             <tr>
                 <td>
-                    <a href="index.html">All Students</a> <!-- TODO: change link from index to all students -->
+                    <a href="allStudents.html">All Students</a>
                 </td>
                 <td>
                     <a href="index.html">Back to Home</a> <!--admin index-->
