added allGames pages, made game date link dynamic

--- a/HTML/admin/allStudents.html
+++ b/HTML/admin/allStudents.html
@@ -61,13 +61,13 @@
         <table id="links">
             <tr>
                 <td>
-                    <a href="index.html">All Students</a> <!-- TODO: change link from index to all students -->
+                    <a href="allStudents.html">All Students</a>
                 </td>
                 <td>
                     <a href="index.html">Back to Home</a> <!--admin index-->
                 </td>
                 <td>
-                    <a href="index.html">All Games</a> <!-- TODO: change link from index to all games -->
+                    <a href="allGames.html">All Games</a>
                 </td>
             </tr>
         </table>
