--- a/HTML/admin/studentView.html
+++ b/HTML/admin/studentView.html
@@ -40,7 +40,7 @@
                     <a href="index.html">Back to Home</a> <!--admin index-->
                 </td>
                 <td>
-                    <a href="index.html">All Games</a> <!-- TODO: change link from index to all games -->
+                    <a href="allGames.html">All Games</a>
                 </td>
             </tr>
         </table>
