--- a/HTML/admin/redBlackView.html
+++ b/HTML/admin/redBlackView.html
@@ -17,6 +17,10 @@
             Players: <span id="playerNum_1">0</span> <br>
             Pairs: <span id="pairNum_1">0</span> <br>
             Rounds: <span id="roundNum_1">0</span> <br> 
+            <br>
+            <!---TODO: make pair links dynamic with names pulled from database - alphabetical by player 1 name in pair? -->
+            Bob & Larry, Billy & Will, David & Zack, Peter & Carter, John & Richard, Michael & Liam, <br>
+            Jack & Sam, Simon & Owen, Thomas & Ethan, Ben & Kyle, Chris & Reece, Joe & Jad
         </div>
         <br>
         <div id ="cardInfo">
