added url information for rBPV.html

--- a/HTML/admin/redBlackView.html
+++ b/HTML/admin/redBlackView.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id="studentHeader_1">Game ()</h1>
         <div id ="gameInfo">
-            Game Name: <span id="gameName_1">Game Name</span> <br>
+            Game Name: Red Card Black Card <br>
             Game Date: <span id="gameDate_1">12-31-1969</span> <br>
         </div>
         <br>
@@ -18,9 +18,10 @@
             Pairs: <span id="pairNum_1">0</span> <br>
             Rounds: <span id="roundNum_1">0</span> <br> 
             <br>
+            <!---TODO: pass game date to this file (redBlackView.html) so that it can be paseed to redBlackPairView.html, both via JavaScript; update d= in pair link as well --->
             <!---TODO: make pair links dynamic with names pulled from database - alphabetical by player 1 name in pair? -->
-            Bob & Larry, Billy & Will, David & Zack, Peter & Carter, John & Richard, Michael & Liam, <br>
-            Jack & Sam, Simon & Owen, Thomas & Ethan, Ben & Kyle, Chris & Reece, Joe & Jad
+            <a href="redBlackPairView.html?d=12-31-1969&p1=bob&p2=larry">Bob & Larry</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=billy&p2=will">Billy & Will</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=david&p2=zack">David & Zack</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=peter&p2=carter">Peter & Carter</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=john&p2=richard">John & Richard</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=michael&p2=liam">Michael & Liam</a>, <br>
+            <a href="redBlackPairView.html?d=12-31-1969&p1=jack&p2=sam">Jack & Sam</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=simon&p2=owen">Simon & Owen</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=thomas&p2=ethan">Thomas & Ethan</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=ben&p2=kyle">Ben & Kyle</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=chris&p2=reece">Chris & Reece</a>, <a href="redBlackPairView.html?d=12-31-1969&p1=joe&p2=jad">Joe & Jad</a>
         </div>
         <br>
         <div id ="cardInfo">
