A couple of changes

--- a/HTML/StudentSignIn/studentSignOn.html
+++ b/HTML/StudentSignIn/studentSignOn.html
@@ -28,7 +28,7 @@ STUDENTSIGNON
             <h1 id="signInHeader">
                 Sign In
             </h1>
-            <form method="POST" action="index.html">
+            <form method="POST" action="../admin/teacherSelectGame.html">
                 <div id="studentUsername">
                     <label for="Email" name="emailLabel" id="email">&nbsp;&nbsp;Email</label>
                     &nbsp;
