--- a/HTML/admin/index.html
+++ b/HTML/admin/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="title">The College of St. Scholastica</div>
         <div class="subtitle">Game Theory<br>Simulations</div>
-        <a class="button" href="../studentSignOn.html">Start</a>
+        <a class="button" href="../StudentSignIn/studentSignOn.html">Start</a>
     </div>
 </body>
 
