--- a/HTML/admin/redBlackView.html
+++ b/HTML/admin/redBlackView.html
@@ -7,7 +7,7 @@
         <!---<script src="..\..\javascript\createGame.js" defer></script>---> <!-- test -->
     <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
     <body>
-        <h1 id="studentHeader_1">Game ()</h1>
+        <h1>Game (Red Card Black Card)</h1>
         <div id ="gameInfo">
             Game Name: Red Card Black Card <br>
             Game Date: <span id="gameDate_1">12-31-1969</span> <br>
