--- a/HTML/admin/redBlackPairView.html
+++ b/HTML/admin/redBlackPairView.html
@@ -101,7 +101,7 @@
     </body>
     <script language="javascript">
         window.onload = function(e){ 
-            displayInfo();
+            displayInfoRedBlack();
         }
     </script>
 </html>
