--- a/HTML/admin/wheatSteelView.html
+++ b/HTML/admin/wheatSteelView.html
@@ -20,6 +20,9 @@
         </div>
         <br>
         <!--- TODO: make team list dynamic, lead to team/pair view-->
+        <!--- difficult when the team name display is already dynamic --->
+            <!--- but it would look something like --->
+                <!--- <a href="wheatSteelTeamView.html?d=12-31-1969&t=TheDealers">The Dealers</a> --->
         <div id="gameResults">
             Teams that Met Both Goals: <span id="bothGoalNames">Susan, Joe</span> <br> 
             Teams that Met One Goal: <span id="oneGoalNames">Susan, Joe</span> <br> 
