updated team views

--- a/HTML/admin/allGames.html
+++ b/HTML/admin/allGames.html
@@ -10,7 +10,6 @@
         <h1 id="gameHeader">All Games</h1>
         <!--- TODO: make game date links dynamic, pulling all game dates from DB sorted in chronological order--->
         <!--- TODO: make links dynamic with game dates --->
-            <!--- is that possible in ColdFusion? I know it is in HTML -->
         <div id="redBlackGameDates">
             <table style="width: 50">
                 <caption style="font-size: 18px"><strong>Red Card Black Card</strong></caption>
@@ -74,8 +73,8 @@
                     <td class="gameDateCell"><a href="wheatSteelView.html?date=10-9-23">10-9-23</a></td>
                 </tr>
                 <tr>
-                    <td class="gameDateCell"><a href="redBlackView.html?date=4-24-23">4-24-23</a></td>
-                    <td class="gameDateCell"><a href="redBlackView.html?date=10-16-23">10-16-23</a></td>
+                    <td class="gameDateCell"><a href="wheatSteelView.html?date=4-24-23">4-24-23</a></td>
+                    <td class="gameDateCell"><a href="wheatSteelView.html?date=10-16-23">10-16-23</a></td>
                 </tr>
             </table>
         </div>
