--- a/HTML/admin/wheatSteelTeamView.html
+++ b/HTML/admin/wheatSteelTeamView.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="..\..\css\header.css">
         <link rel="stylesheet" href="..\..\css\admin.css">
         <script src="..\..\javascript\teamRetrieve.js" defer></script>
-        <!--<script src="..\..\javascript\createGame.js" defer></script>--> <!-- test -->
+        <script src="..\..\javascript\createGame.js" defer></script> <!-- test -->
     <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
     <body>
         <h1 id="studentHeader">Team (<span id="teamName">Susan</span>)</h1>
@@ -24,55 +24,53 @@
                     <th class="tableHeader roundHeader">Period 4</th>
                     <th class="tableHeader roundHeader">Period 5</th>
                 </tr>
-                <!---TODO: make table cells dynamic (except round numbers) --->
-                    <!--- add to JS file --->
                 <tr>
-                    <td class="resourceCol">Wheat</td>
+                    <td class="blueBack">Wheat</td>
                     <td id="roundOneWheat" class="amount">0</td>
-                    <td id="roundTwoWheat" class="amount">0</td>
+                    <td id="roundTwoWheat" class="amount blueBack">0</td>
                     <td id="roundThreeWheat" class="amount">0</td>
-                    <td id="roundFourWheat" class="amount">0</td>
+                    <td id="roundFourWheat" class="amount blueBack">0</td>
                     <td id="roundFiveWheat" class="amount">0</td>
                 </tr>
                 <tr>
-                    <td class="resourceCol">Steel</td>
-                    <td id="roundOneSteel" class="amount">0</td>
+                    <td class="blueBack">Steel</td>
+                    <td id="roundOneSteel" class="amount blueBack">0</td>
                     <td id="roundTwoSteel" class="amount">0</td>
-                    <td id="roundThreeSteel" class="amount">0</td>
+                    <td id="roundThreeSteel" class="amount blueBack">0</td>
                     <td id="roundFourSteel" class="amount">0</td>
-                    <td id="roundFiveSteel" class="amount">0</td>
+                    <td id="roundFiveSteel" class="amount blueBack">0</td>
                 </tr>
                 <tr>
-                    <td class="resourceCol">Wheat Trade</td>
+                    <td class="blueBack">Wheat Trade</td>
                     <td id="roundOneWheatTrade" class="amount">0</td>
-                    <td id="roundTwoWheatTrade" class="amount">0</td>
+                    <td id="roundTwoWheatTrade" class="amount blueBack">0</td>
                     <td id="roundThreeWheatTrade" class="amount">0</td>
-                    <td id="roundFourWheatTrade" class="amount">0</td>
+                    <td id="roundFourWheatTrade" class="amount blueBack">0</td>
                     <td id="roundFiveWheatTrade" class="amount">0</td>
                 </tr>
                 <tr>
-                    <td class="resourceCol">Steel Trade</td>
-                    <td id="roundOneSteelTrade" class="amount">0</td>
+                    <td class="blueBack">Steel Trade</td>
+                    <td id="roundOneSteelTrade" class="amount blueBack">0</td>
                     <td id="roundTwoSteelTrade" class="amount">0</td>
-                    <td id="roundThreeSteelTrade" class="amount">0</td>
+                    <td id="roundThreeSteelTrade" class="amount blueBack">0</td>
                     <td id="roundFourSteelTrade" class="amount">0</td>
-                    <td id="roundFiveSteelTrade" class="amount">0</td>
+                    <td id="roundFiveSteelTrade" class="amount blueBack">0</td>
                 </tr>
                 <tr>
-                    <td class="resourceCol">Wheat Consumed</td>
+                    <td class="blueBack">Wheat Consumed</td>
                     <td id="roundOneWheatConsumed" class="amount">0</td>
-                    <td id="roundTwoWheatConsumed" class="amount">0</td>
+                    <td id="roundTwoWheatConsumed" class="amount blueBack">0</td>
                     <td id="roundThreeWheatConsumed" class="amount">0</td>
-                    <td id="roundFourWheatConsumed" class="amount">0</td>
+                    <td id="roundFourWheatConsumed" class="amount blueBack">0</td>
                     <td id="roundFiveWheatConsumed" class="amount">0</td>
                 </tr>
                 <tr>
-                    <td class="resourceCol">Steel Consumed</td>
-                    <td id="roundOneSteelConsumed" class="amount">0</td>
+                    <td class="blueBack">Steel Consumed</td>
+                    <td id="roundOneSteelConsumed" class="amount blueBack">0</td>
                     <td id="roundTwoSteelConsumed" class="amount">0</td>
-                    <td id="roundThreeSteelConsumed" class="amount">0</td>
+                    <td id="roundThreeSteelConsumed" class="amount blueBack">0</td>
                     <td id="roundFourSteelConsumed" class="amount">0</td>
-                    <td id="roundFiveSteelConsumed" class="amount">0</td>
+                    <td id="roundFiveSteelConsumed" class="amount blueBack">0</td>
                 </tr>
             </table>
         </div>
